export const snapshot = {};

snapshot[`Typegraph using temporal 1`] = `
'[
  {
    "\$id": "https://metatype.dev/specs/0.0.3.json",
    "types": [
      {
        "type": "object",
        "title": "temporal",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "start": 1,
          "query": 6,
          "signal": 8,
          "describe": 12
        },
        "required": [
          "start",
          "query",
          "signal",
          "describe"
        ]
      },
      {
        "type": "function",
        "title": "func_34",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 3,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_6",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 3,
          "task_queue": 3,
          "args": 4
        },
        "required": []
      },
      {
        "type": "string",
        "title": "string_2",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "list",
        "title": "list_4",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 5
      },
      {
        "type": "object",
        "title": "object_1",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "some_field": 3
        },
        "required": []
      },
      {
        "type": "function",
        "title": "func_35",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 7,
        "output": 3,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_12",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 3,
          "run_id": 3,
          "args": 4
        },
        "required": []
      },
      {
        "type": "function",
        "title": "func_36",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 9,
        "output": 11,
        "materializer": 3,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_21",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 10,
          "run_id": 3,
          "args": 4
        },
        "required": []
      },
      {
        "type": "string",
        "title": "string_20",
        "runtime": 1,
        "policies": [],
        "injection": {
          "source": "static",
          "data": {
            "value": "\\\\"1234\\\\""
          }
        },
        "config": {},
        "as_id": false
      },
      {
        "type": "boolean",
        "title": "boolean_17",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "func_37",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 13,
        "output": 14,
        "materializer": 4,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_32",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 3,
          "run_id": 3
        },
        "required": []
      },
      {
        "type": "object",
        "title": "object_31",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "start_time": 15,
          "close_time": 15,
          "state": 15
        },
        "required": []
      },
      {
        "type": "optional",
        "title": "optional_26",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 16,
        "default_value": null
      },
      {
        "type": "integer",
        "title": "integer_25",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      }
    ],
    "materializers": [
      {
        "name": "start_workflow",
        "runtime": 1,
        "effect": {
          "effect": "create",
          "idempotent": false
        },
        "data": {
          "workflow_type": "<workflow_type>"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      },
      {
        "name": "query_workflow",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "query_type": "<query_type>"
        }
      },
      {
        "name": "signal_workflow",
        "runtime": 1,
        "effect": {
          "effect": "update",
          "idempotent": false
        },
        "data": {
          "signal_name": "<signal_name>"
        }
      },
      {
        "name": "describe_workflow",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {}
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      },
      {
        "name": "temporal",
        "data": {
          "name": "<name>",
          "host_secret": "<host_secret>",
          "namespace_secret": "<ns_secret>"
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": true,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.3",
      "randomSeed": null,
      "artifacts": {}
    }
  }
]'
`;

snapshot[`Typegraph using temporal 2`] = `
'[
  {
    "\$id": "https://metatype.dev/specs/0.0.3.json",
    "types": [
      {
        "type": "object",
        "title": "temporal",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "startKv": 1,
          "query": 6,
          "signal": 10,
          "describe": 15
        },
        "required": [
          "startKv",
          "query",
          "signal",
          "describe"
        ]
      },
      {
        "type": "function",
        "title": "func_7",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 3,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_5",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 3,
          "task_queue": 3,
          "args": 4
        },
        "required": []
      },
      {
        "type": "string",
        "title": "string_1",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "list",
        "title": "list_3",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 5
      },
      {
        "type": "object",
        "title": "object_0",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {},
        "required": []
      },
      {
        "type": "function",
        "title": "func_16",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 7,
        "output": 9,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_14",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 3,
          "run_id": 3,
          "args": 8
        },
        "required": []
      },
      {
        "type": "list",
        "title": "list_13",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 3
      },
      {
        "type": "optional",
        "title": "optional_10",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 3,
        "default_value": null
      },
      {
        "type": "function",
        "title": "func_26",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 11,
        "output": 14,
        "materializer": 3,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_24",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 3,
          "run_id": 3,
          "args": 12
        },
        "required": []
      },
      {
        "type": "list",
        "title": "list_22",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 13
      },
      {
        "type": "object",
        "title": "object_19",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "key": 3,
          "value": 3
        },
        "required": []
      },
      {
        "type": "boolean",
        "title": "boolean_23",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "func_38",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 16,
        "output": 17,
        "materializer": 4,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "object_36",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 3,
          "run_id": 3
        },
        "required": []
      },
      {
        "type": "object",
        "title": "object_35",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "start_time": 18,
          "close_time": 18,
          "state": 18
        },
        "required": []
      },
      {
        "type": "optional",
        "title": "optional_30",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 19,
        "default_value": null
      },
      {
        "type": "integer",
        "title": "integer_29",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      }
    ],
    "materializers": [
      {
        "name": "start_workflow",
        "runtime": 1,
        "effect": {
          "effect": "create",
          "idempotent": false
        },
        "data": {
          "workflow_type": "keyValueStore"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      },
      {
        "name": "query_workflow",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "query_type": "getValue"
        }
      },
      {
        "name": "signal_workflow",
        "runtime": 1,
        "effect": {
          "effect": "update",
          "idempotent": false
        },
        "data": {
          "signal_name": "setValue"
        }
      },
      {
        "name": "describe_workflow",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {}
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      },
      {
        "name": "temporal",
        "data": {
          "name": "test",
          "host_secret": "HOST",
          "namespace_secret": "NAMESPACE"
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": true,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.3",
      "randomSeed": null,
      "artifacts": {}
    }
  }
]'
`;
